# dissociating-similarity

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
dissociation/: __init__.py  colourblind.py  main.py
dissociation/fig4/: logreg.py
fig4/: crossval.py  expand.py  logistic.py  mnist.py  rsa.py  test-advantages.ipynb  watermark.ipynb  xor.ipynb
notebooks/: figure-1.ipynb  figure-2.ipynb  figure-3.ipynb  figure-4.ipynb  figure-5.ipynb  style.mplstyle
notebooks/exploratory/: FIGURE-2.ipynb  FIGURE-4.ipynb  FIGURE-5.ipynb  Untitled.ipynb  Untitled1.ipynb  figure-1.ipynb  figure-2-figure-rich-vs-lazy.ipynb  figure-2-linear-network-solution-manifold.ipynb  figure-3.ipynb  full-noise.ipynb  hss.pickle  minimnum-representation-norm-solution.ipynb  parameter-noise-constrained-satisfaction.ipynb
notebooks/fig1/: FIGURE-0.ipynb
notebooks/fig5/: test-advantages.ipynb
results/fig4/: distance.py  regression.py  test-advantages.ipynb  watermark.ipynb  xor.py
scripts/: FIGURE-0.ipynb  FIGURE-2.ipynb  FIGURE-4.ipynb  FIGURE-5.ipynb  Untitled.ipynb  Untitled1.ipynb  figure-1.ipynb  figure-2-figure-rich-vs-lazy.ipynb  figure-2-linear-network-solution-manifold.ipynb  figure-3.ipynb  full-noise.ipynb  minimnum-representation-norm-solution.ipynb  parameter-noise-constrained-satisfaction.ipynb  random-variables.ipynb
src/dissociation/: __init__.py  colourblind.py  dataloader.py  main.py  plotting.py  robustness.py  utils.py  walks.py
src/dissociation/fig4/: bmap.py  mnist.py
src/dissociation/fig5/: logistic.py  mnist.py  rsa.py
