[project]
name = "dissociation"
version = "1.0.0"
description = "Dissociation of functional and representational similarity in deep neural networks."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "equinox>=0.12.2",
    "jax>=0.4.29",
    "jaxlib>=0.4,<0.5",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
