[project]
name = "dissociation"
version = "1.0.0"
description = "Dissociation of functional and representational similarity in deep neural networks."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "equinox>=0.12.2",
    # GPU on Linux.
    "jax[cuda12]>=0.4.29 ; sys_platform == 'linux'",
    # CPU everywhere else.
    "jax>=0.4.29 ; sys_platform != 'linux'",
    # No more `jaxlib` support for Intel Macs.
    "jaxlib>=0.4,<0.5 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    # Latest versions on Apple Silicon, Windows
    "jaxlib>=0.6.1 ; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.3",
    "optax>=0.2.4",
    "optimistix>=0.0.10",
    "treescope>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
